Error Rectified In Chat List

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,14 @@ android {
         enabled = true
 
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    dependenciesInfo {
+        includeInApk true
+        includeInBundle true
+    }
 }
 
 dependencies {
