--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.3.1'
     implementation 'com.google.firebase:firebase-functions:19.0.2'
     implementation 'com.google.firebase:firebase-messaging:20.2.3'
+    implementation 'at.stefangeyer.challonge.rest:retrofit:2.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -64,5 +65,14 @@ dependencies {
     implementation 'com.jsibbold:zoomage:1.2.0'
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 
+    compile 'com.github.Mahfa:DayNightSwitch:1.2'
+
+    implementation 'com.devlomi.record-view:record-view:2.0.1'
+    compile 'com.vanniktech:emoji:0.5.1'
+
+
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
 
 }
